        Reviewed by Tristan.

http://bugs.webkit.org/show_bug.cgi?id=15239
        <rdar://problem/5491955> REGRESSION (r25547): With Hanin IME, one cannot input characters into forms (15239)

        This problem was caused by the setComposition method failing to clearing
        the composition markers in the presence of an empty string.  This would
        result in the caret being locked within the 0 length bounds of the "composition"
        and so preventing basic keyboard interaction.

        * editing/Editor.cpp:
        (WebCore::Editor::setComposition):



Canonical link: https://commits.webkit.org/20151@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@25694 268f45cc-cd09-0410-ab3c-d52691b4dbfc